testing/errors/valuenotdefined2.a
;ACME 0.97
	* = $200
	!by [0, 1, example]
